--- a/styles/style.css
+++ b/styles/style.css
@@ -95,3 +95,23 @@ header .line {
     border-radius: 50%;
     margin-right: 40px;
 }
+
+
+.area1-img1 {
+    background-color: #117050;
+}
+
+.area1-img2 {
+    background-image: ;
+    grid-column: 2 / 3;
+    grid-row: 1/3;
+}
+
+.area1 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.area1-content {
+
+}
