--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,29 @@ header .line {
     margin: auto;
 }
 
+.bar {
+    background-color: #006341;
+    width: 168px;
+    height: 22px;
+}
+
+h1 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 90px;
+    font-weight: bold;
+    line-height: 100px;
+    margin: 0;
+    margin-bottom: 30px;
+}
+
+h2 {
+    font-family: 'Oswald', sans-serif;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 45px;
+    margin: 0;
+}
+
 .header--area {
     display: flex;
     align-items: center;
@@ -75,21 +98,12 @@ header .line {
     padding-bottom: 90px;
 }
 
-.banner h1 {
-    font-family: 'Oswald', sans-serif;
-    font-size: 90px;
-    font-weight: bold;
-    line-height: 100px;
-    margin: 0;
-    margin-bottom: 30px;
-}
-
 .banner-images {
     margin-top: 60px;
 }
 
 .banner-images img{
-    weight: 148px;
+    width:  148px;
     height: 148px;
     border: 6px solid #117050;
     border-radius: 50%;
@@ -98,13 +112,18 @@ header .line {
 
 
 .area1-img1 {
-    background-color: #117050;
+    background-image: url(../images/f2.jpg);
+    height: 350px;
+    background-size: cover;
+    background-position: center;
 }
 
 .area1-img2 {
-    background-image: ;
     grid-column: 2 / 3;
     grid-row: 1/3;
+    background-image: url(../images/f1.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 .area1 {
@@ -113,5 +132,5 @@ header .line {
 }
 
 .area1-content {
-
+    padding: 80px;
 }
