--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,21 @@ h2 {
     font-weight: bold;
     font-size: 40px;
     line-height: 45px;
-    margin: 0;
+    margin: 20px 0;
+}
+
+.button {
+    border: 2px solid #454545;
+    display: inline-block;
+    padding: 10px 30px;
+    border-radius: 3px;
+    color: #454545;
+    text-decoration: none;
+}
+
+.button:hover {
+    background-color: #454545;
+    color: #fff;
 }
 
 .header--area {
@@ -133,4 +147,13 @@ h2 {
 
 .area1-content {
     padding: 80px;
+}
+
+.area1-quote {
+    margin-bottom: 30px;
+}
+
+.area1-text {
+    margin-bottom: 50px;
+    line-height: 25px;
 }
