--- a/styles/style.css
+++ b/styles/style.css
@@ -234,3 +234,26 @@ h2 {
     background-image: url(../images/bg3.jpg);
     background-position: left;
 }
+
+.area5 {
+    background-image: url(../images/bg4.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 600px;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 80px;
+    text-align: center;
+}
+
+footer a{
+    text-decoration: none;
+    color: white;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
