--- a/styles/style.css
+++ b/styles/style.css
@@ -257,3 +257,32 @@ footer a{
 footer a:hover {
     text-decoration: underline;
 }
+
+
+@media (min-width: 769px) and (max-width: 1140px) {
+    .container {
+        padding: 0 20px;
+    }
+}
+
+@media (min-width: 426px) and (max-width: 768px) {
+    .container {
+        padding: 0 20px;
+    }
+
+    .area1 {
+        grid-template-columns: 3fr 2fr;
+    }
+
+    .area2 {
+        grid-template-columns: 2fr 3fr;
+    }
+
+    .area3 {
+        grid-template-columns: 3fr 2fr;
+    }
+}
+
+@media (min-width: 425px) {
+    
+}
